# server

./: .gitignore  aa.json  config.json  customer.json  fastapiUtils.py  main.py  menuitemURL.json  middleware.py  pyproject.toml  readMenuitemURL.py  test.py  uvicorn_loggin_config.json
src/exterior/utilsServer/: setup.py
src/package/: conf.json  controller.py  crs.json  utils.py
src/package/catalog/: setup.py
src/package/concurrent/: __init__.py  setup.py
src/package/coordinateStr/: __init__.py  execute.py  setup.py  template.json  test.py
src/package/database/: TYPE.py  __init__.py  engine.py  service.py
src/package/egde/: setup.py
src/package/exf/: setup.py
src/package/fittedModel/: fitted.py
src/package/fitting/: setup.py
src/package/gdMap/: setup.py
src/package/handleGeometry/: AdjacentCoding.py  TFBH.py  areaEqually.py  attributeContrast.py  nearPoint.py  setup.py  utils.py
src/package/interface/: interface.json  setup.py
src/package/landownership/: Ownership.py  __init__.py  config.py  所有权面积分类.py  界址点处理.py
src/package/machineIearning/: active.py  setup.py  test.py
src/package/pdf/: setup.py
src/package/pointCloud/: setup.py
src/package/redis/: setup.py
src/package/sawtooth/: setup.py
src/package/searchPhoto/: setup.py
src/package/settings/: config.py
src/package/word/: setup.py
src/package/大足占补平衡申报/: execute.py
src/package/重庆市网上中介服务信息/: database.py  setup.py  web_scraper.py  结果公告.json  采购公告.json
src/routers/: Api.py  Result.py  Store.py  Use.py  __init__.py  log.py  utils.py
src/routers/collection/: ErrorCode.py  (+5 more)
(+57 files in other folders)
