[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "docx>=0.2.4",
    "docxcompose>=1.4.0",
    "fastapi>=0.115.12",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "jwt>=1.3.1",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pdf2docx>=0.5.8",
    "pdf2image>=1.17.0",
    "psycopg2>=2.9.10",
    "pyjwt>=2.10.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
